[package]
name = "kyanite"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
regex = "1.0"
num_cpus = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "kyanite"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
